--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pickitup
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-name=com.mysql.jdbc.Driver
-spring.jpa.show-sql:true
+spring.jpa.show-sql=true
+server.port=8100
