--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=password
 spring.datasource.driver-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=8100
+
+jwt.server.secret=ouebba93hriiabs15bub83
+jwt.seerver.tokenExpiryTime=10000
