--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/pickitup
 spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.password=password
 spring.datasource.driver-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=8100
