organization create api added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.show-sql=true
 server.port=8100
 
 jwt.server.secret=ouebba93hriiabs15bub83
-jwt.seerver.tokenExpiryTime=10000
+jwt.server.tokenExpiryTime=10000
