--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-#with using docker
+#using docker
 spring.datasource.url=jdbc:mysql://mysql-standalone:3306/pickitup
 #without using docker
 #spring.datasource.url=jdbc:mysql://localhost:3306/pickitup
