--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 spring.jpa.hibernate.ddl-auto=update
 #using docker
-spring.datasource.url=jdbc:mysql://mysql-standalone:3306/pickitup
+#spring.datasource.url=jdbc:mysql://mysql-standalone:3306/pickitup
 #without using docker
-#spring.datasource.url=jdbc:mysql://localhost:3306/pickitup
+spring.datasource.url=jdbc:mysql://localhost:3306/pickitup
 spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.password=password
 spring.datasource.driver-name=com.mysql.jdbc.Driver
 spring.jpa.show-sql=true
 server.port=8100
 
 jwt.server.secret=ouebba93hriiabs15bub83
 jwt.server.tokenExpiryTime=10000
+
+redis.server.hostName=localhost
+redis.server.port=6379
